[gd_scene load_steps=2 format=3 uid="uid://coko353q1ig3y"]

[ext_resource type="Script" uid="uid://wksrt32v8yyw" path="res://components/world_info_view/invoice_container.gd" id="1_rrjx8"]

[node name="InvoiceContainer" type="MarginContainer"]
size_flags_horizontal = 3
script = ExtResource("1_rrjx8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerIdLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "6cfdeffe6019fd33d6aa129af1143846"

[node name="BankAccountLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="PaymentDetailContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PaymentIdContainer" type="HBoxContainer" parent="VBoxContainer/PaymentDetailContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PaymentDetailContainer/PaymentIdContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Payment Id"

[node name="PaymentIdLineEdit" type="LineEdit" parent="VBoxContainer/PaymentDetailContainer/PaymentIdContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AmountContainer" type="HBoxContainer" parent="VBoxContainer/PaymentDetailContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PaymentDetailContainer/AmountContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Amount"

[node name="NextMoneyLineEdit" type="LineEdit" parent="VBoxContainer/PaymentDetailContainer/AmountContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DueDateContainer" type="HBoxContainer" parent="VBoxContainer/PaymentDetailContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PaymentDetailContainer/DueDateContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Due Date"

[node name="NextDateLineEdit" type="LineEdit" parent="VBoxContainer/PaymentDetailContainer/DueDateContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="PublicIpsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PublicIpsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "Public Ips"

[node name="PublicIpContainer" type="VBoxContainer" parent="VBoxContainer/PublicIpsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
